Fail before formatting if partition contains a partition table

Formatting fails for a partition containing a partition table (e.g. Fedora
hybrid iso). Consequently the device is in wrong state, so check it before
modification and fail with a comprehensible error message.

https://bugs.freedesktop.org/show_bug.cgi?id=76178